# simple-localization-rs

./: Cargo.toml  README.md
localization/: tr_TR
src/: lib.rs
