[package]
name = "simple-localization"
description = "Simple localization library for text translation"
version = "0.1.1"
edition = "2021"
license = "MIT"
keywords = ["localization", "internalization", "translation"]
repository = "https://github.com/eminfedar/simple-localization-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_dir = "0.7"
lazy_static = "1.4.0"
lazy-regex = "2.5.0"
